new_tests/semantics/scope/bad/006_FCD1.cm

def func() => Void {}
def func() => Void {}
